WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283459
REGRESSION(
286767@main
): [Skia] error: invalid application of 'sizeof' to an incomplete type 'WebCore::GLFence'
https://bugs.webkit.org/show_bug.cgi?id=283459
Summary
REGRESSION(286767@main): [Skia] error: invalid application of 'sizeof' to an ...
Fujii Hironori
Reported
2024-11-20 19:38:59 PST
Windows Skia port can't compile after
286767@main
. In file included from <built-in>:1: In file included from C:\webkit\wc\WebKitBuild\Debug\Source\WebCore\CMakeFiles\WebCore.dir\cmake_pch.hxx:5: In file included from C:\webkit\wc\Source\WebCore\WebCorePrefix.h:69: In file included from C:\Program Files\Microsoft Visual Studio\2022\Professional\VC\Tools\MSVC\14.41.34120\include\chrono:25: In file included from C:\Program Files\Microsoft Visual Studio\2022\Professional\VC\Tools\MSVC\14.41.34120\include\format:53: In file included from C:\Program Files\Microsoft Visual Studio\2022\Professional\VC\Tools\MSVC\14.41.34120\include\locale:10: In file included from C:\Program Files\Microsoft Visual Studio\2022\Professional\VC\Tools\MSVC\14.41.34120\include\xlocbuf:10: In file included from C:\Program Files\Microsoft Visual Studio\2022\Professional\VC\Tools\MSVC\14.41.34120\include\streambuf:10: In file included from C:\Program Files\Microsoft Visual Studio\2022\Professional\VC\Tools\MSVC\14.41.34120\include\xiosbase:12: In file included from C:\Program Files\Microsoft Visual Studio\2022\Professional\VC\Tools\MSVC\14.41.34120\include\xlocale:12: C:\Program Files\Microsoft Visual Studio\2022\Professional\VC\Tools\MSVC\14.41.34120\include\memory(3301,27): error: invalid application of 'sizeof' to an incomplete type 'WebCore::GLFence' 3301 | static_assert(0 < sizeof(_Ty), "can't delete an incomplete type"); | ^~~~~~~~~~~ C:\Program Files\Microsoft Visual Studio\2022\Professional\VC\Tools\MSVC\14.41.34120\include\memory(3412,13): note: in instantiation of member function 'std::default_delete<WebCore::GLFence>::operator()' requested here 3412 | _Mypair._Get_first()(_Mypair._Myval2); | ^ C:\webkit\wc\Source\WebCore\platform/graphics/skia/ImageBufferSkiaAcceleratedBackend.cpp(87,36): note: in instantiation of member function 'std::unique_ptr<WebCore::GLFence>::~unique_ptr' requested here 87 | ImageBufferSkiaAcceleratedBackend::ImageBufferSkiaAcceleratedBackend(const Parameters& parameters, sk_sp<SkSurface>&& surface) | ^ C:\webkit\wc\Source\WebCore\platform\graphics\NativeImage.h(41,7): note: forward declaration of 'WebCore::GLFence' 41 | class GLFence; | ^ In file included from C:\webkit\wc\WebKitBuild\Debug\WebCore\DerivedSources\unified-sources\UnifiedSource-3c72abbe-52.cpp:8: C:\webkit\wc\Source\WebCore\platform/graphics/skia/ImageBufferSkiaAcceleratedBackend.cpp(123,9): error: incomplete type 'WebCore::GLFence' named in nested name specifier 123 | if (GLFence::isSupported()) { | ^~~~~~~~~ C:\webkit\wc\Source\WebCore\platform\graphics\NativeImage.h(41,7): note: forward declaration of 'WebCore::GLFence' 41 | class GLFence; | ^ In file included from C:\webkit\wc\WebKitBuild\Debug\WebCore\DerivedSources\unified-sources\UnifiedSource-3c72abbe-52.cpp:8: C:\webkit\wc\Source\WebCore\platform/graphics/skia/ImageBufferSkiaAcceleratedBackend.cpp(125,19): error: incomplete type 'WebCore::GLFence' named in nested name specifier 125 | m_fence = GLFence::create(); | ^~~~~~~~~ C:\webkit\wc\Source\WebCore\platform\graphics\NativeImage.h(41,7): note: forward declaration of 'WebCore::GLFence' 41 | class GLFence; | ^ In file included from C:\webkit\wc\WebKitBuild\Debug\WebCore\DerivedSources\unified-sources\UnifiedSource-3c72abbe-52.cpp:8: C:\webkit\wc\Source\WebCore\platform/graphics/skia/ImageBufferSkiaAcceleratedBackend.cpp(137,12): error: member access into incomplete type 'WebCore::GLFence' 137 | m_fence->serverWait(); | ^ C:\webkit\wc\Source\WebCore\platform\graphics\NativeImage.h(41,7): note: forward declaration of 'WebCore::GLFence' 41 | class GLFence; | ^ 4 errors generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2024-11-20 19:41:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36930
EWS
Comment 2
2024-11-20 19:53:00 PST
Committed
286888@main
(06196fccc216): <
https://commits.webkit.org/286888@main
> Reviewed commits have been landed. Closing PR #36930 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-11-20 19:53:15 PST
<
rdar://problem/140318827
>
Nikolas Zimmermann
Comment 4
2024-11-21 01:21:53 PST
Thanks Fujii!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug