REGRESSION(286767@main): [Skia] error: invalid application of 'sizeof' to an incomplete type 'WebCore::GLFence' https://bugs.webkit.org/show_bug.cgi?id=283459

Unreviewed build fix for Windows Skia port.
It can't compile after <https://commits.webkit.org/286767@main>.

* Source/WebCore/platform/graphics/skia/ImageBufferSkiaAcceleratedBackend.cpp:
Moved #include "GLFence.h" to outside of #if USE(COORDINATED_GRAPHICS).

Canonical link: https://commits.webkit.org/286888@main